2009-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/CMakeLists.txt: remove YARP1 compatibility libraries
	as a build option.

	* example/swig/yarp.i: apply C# support patch from Stephane
	Lallee (thanks Stephane!).  Also added better translation of
	the reply method.
	

2009-11-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: start enforcing some RPC
	contraints.  These only apply to users of the 
	RpcServer/RpcClient classes.

	* src/libYARP_OS/include/yarp/os/RpcServer.h: add a stub for 
	an RPC client specialization of Ports.  This adds no new 
	behavior, except to let the user declare that a port should
	only be used as an RPC client.  This will let YARP give better
	warnings/errors.

	* src/libYARP_OS/include/yarp/os/RpcClient.h: add a stub for 
	an RPC client specialization of Ports.  This adds no new 
	behavior, except to let the user declare that a port should
	only be used as an RPC client.  This will let YARP give better
	warnings/errors.

	* src/libYARP_OS/include/yarp/os/Port.h: add flags for tagging
	ports as input, output, and rpc based.

	* src/libYARP_OS/include/yarp/os/Property.h: make hash size
	of property objects configurable.

2009-10-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PropertyTest.cpp
	* src/libYARP_sig/src/Image.cpp
	* src/libYARP_sig/src/ImageFile.cpp: deal with const char *
	conversions.

2009-10-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Protocol.h: propagate
	carrier modifiers.  Carrier modifiers are not used yet,
	but will be convenient for accessing variants of standard
	port output.

2009-10-28  Arjan Gijsberts  <arjan@liralab.it>
	* src/libYARP_OS/src/BottleImpl.cpp
	* src/libYARP_sig/src/Vector.cpp
	* src/libYARP_sig/src/Matrix.cpp
	Increased buffers to 512 bytes to prevent buffer overflows when 
	printing (large) floating point numbers.

2009-10-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
