@@ -1,3 +1,12 @@
+2009-11-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/harness/PropertyTest.cpp: add regression test
+	for windows paths in environment variables.
+
+	* src/libYARP_OS/src/Property.cpp: make exception for treatment
+	of "\" characters in environment variables, to allow windows
+	paths to work.
+
 2009-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/CMakeLists.txt: remove YARP1 compatibility libraries
